update db constructure
